# sidespread

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/: README.md  architecture.md  benchmark_baseline.md  implementation_plan.md  real_music_benchmark.md  requirements.md  research_notes.md  universr_pipeline_spec.md
.github/workflows/: ci.yml  release.yml
models/: model-manifest.json  universr_config.json
scripts/: benchmark_fma.py  build_universr_model.py  export_universr_onnx.py
src/: cli.rs  config.rs  lib.rs  main.rs  model.rs  pipeline.rs  terminal.rs
src/analysis/: bandwidth.rs  defects.rs  detector.rs  mod.rs  segment.rs  spectrum.rs  stft.rs
src/eval/: metrics.rs  mod.rs  report.rs  synthetic.rs
src/io/: mod.rs  mside.rs  wav.rs
src/repair/: artifacts.rs  bandwidth.rs  common.rs  dsp.rs  mod.rs  neural.rs  safety.rs
src/repair/universr/: config.rs  frontend.rs  istft.rs  merge.rs  mod.rs  ode.rs  onnx_session.rs
tests/: pipeline_regression.rs  universr_validation.rs
tests/fixtures/: universr_ref.npz
