[package]
name = "sidespread"
version = "0.2.0"
edition = "2021"
description = "Repair high-frequency loss in the side channel of AI-generated stereo music"
license = "Apache-2.0"

[lib]
name = "sidespread"
path = "src/lib.rs"

[[bin]]
name = "sidespread"
path = "src/main.rs"

[dependencies]
hound = "3.5"
realfft = "3.4"
ndarray = "0.17"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rubato = "0.16"
ort = { version = "2.0.0-rc.10", features = ["ndarray", "download-binaries"] }
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

[dev-dependencies]
approx = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
